--- a/index6.html
+++ b/index6.html
@@ -22,7 +22,7 @@
 </style>
 
 <div id="mapid"</div>
-<script src="https://embed.github.com/view/geojson/peterajohnson/Geog_483/master/points.geojson" type="text/javascript"></script>
+<script src="https://embed.github.com/view/geojson/jsue7/jjrsu.github.io/master/coffeeshop.geojson" type="text/javascript"></script>
 
 </body>
 </html>
